# desktop-maestro

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.api  LICENSE  Makefile  README.md  dev_watch.py  docker-compose.dev.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.py  start.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default_config.yaml
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/desktopmaestro/[...path]/: route.ts
frontend/src/app/components/: DirectoryTree.tsx  FileTypeBadge.tsx  FolderSelector.tsx
frontend/src/lib/: api.ts
installer/: com.desktopmaestro.plist
installer/homebrew/: desktopmaestro.rb
organizer/: __init__.py  categories.py  cli.py  config.py  core.py  server.py  utils.py
tests/: __init__.py  test_organizer.py
