[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktopmaestro"
version = "1.0.0"
description = "🧹 Smart desktop organizer for macOS — automatically sort files into categorized folders"
readme = "README.md"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Bruno Toffanetto Verissimo", email = "brunitobe@gmail.com"},
]
requires-python = ">=3.9"
keywords = [
    "macos", "desktop", "organizer", "file-management", "productivity",
    "file-organization", "desktop-cleaner", "macos-utility",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
]
ci = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
desktopmaestro = "organizer.cli:main"
dmaestro = "organizer.cli:main"

[project.urls]
Homepage = "https://github.com/brunobergoglio/desktop-maestro"
Repository = "https://github.com/brunobergoglio/desktop-maestro"
Documentation = "https://github.com/brunobergoglio/desktop-maestro#readme"
Issues = "https://github.com/brunobergoglio/desktop-maestro/issues"
Changelog = "https://github.com/brunobergoglio/desktop-maestro/releases"

[tool.setuptools.packages.find]
include = ["organizer*"]

# =============================================================================
# Tool configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "RUF"]
ignore = ["PTH123", "E501", "RUF001", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["organizer"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
